--- a/button-chaserV1/index.html
+++ b/button-chaserV1/index.html
@@ -3,12 +3,30 @@
     <head>
         <meta name="mainpage" content="initial-scale=1, width=device-width">
         <link href="style.css" rel="stylesheet">
-        <script src="script.js"></script>
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                let buttonToBeMoved = document.querySelector('#button-div')
+                let buttonCoordinates = buttonToBeMoved.getBoundingClientRect();
+                let buttonXCoordinates = buttonCoordinates.left;
+                let buttonYCoordinates = buttonCoordinates.top;
+
+                function cursorIsNearButton(event) {
+                    let x = event.clientX;
+                    let y = event.clientY;
+                    if (buttonXCoordinates - x < 5 && y - buttonYCoordinates < 5) {
+                        buttonXCoordinates = buttonXCoordinates + 30;
+                        buttonYCoordinates = buttonYCoordinates + 30;
+                    }
+                }
+            });
+        </script>
         <title>Button Chaser Volume 1</title>
     </head>
     <body>
-        <div class="container">
-              <button id="button-to-be-chased" class="button-class">Chase me :)</button>
+        <div onmousemove="cursorIsNearButton(event)" class="container">
+            <div id="button-div"  class="button-class">
+                <button id="button-to-be-chased">Chase me :)</button>
+            </div>
         </div>
     </body>
 </html>
