Add solution for button-chaserV2

--- a/button-chaserV2/index.html
+++ b/button-chaserV2/index.html
@@ -7,10 +7,10 @@
         <title>Button Chaser Volume 2</title>
     </head>
     <body>
-        <div id="canvas" onmousemove="cursorIsNearButton(event)" class="container">
-            <div id="button-div"  class="button-class">
-                <button id="button-to-be-chased" onmouseover="youCanIndeedTouchedTheButtonOhMyGod()">Chase me >:3</button>
-                <p id="demo"></p>
+        <div id="canvas" onmousemove="cursorIsNearButton(event)" class="body__container">
+            <div id="button-div"  class="body__container__button-class">
+                <button class="body__container__button-class__button" id="button-to-be-chased" onmouseover="youCanIndeedTouchedTheButtonOhMyGod()">Chase me >:3</button>
+                <p class="body__container__button-class__button__text" id="demo"></p>
             </div>
         </div>
     </body>
