--- a/button-chaserV1/index.html
+++ b/button-chaserV1/index.html
@@ -7,9 +7,9 @@
         <title>Button Chaser Volume 1</title>
     </head>
     <body>
-        <div id="canvas" onmousemove="cursorIsNearButton(event)" class="container">
-            <div id="button-div"  class="button-class">
-                <button id="button-to-be-chased" onmouseover="youCanIndeedTouchedTheButtonOhMyGod()">Chase me >:3</button>
+        <div id="canvas" onmousemove="cursorIsNearButton(event)" class="body__container">
+            <div id="button-div"  class="body__container__button-class">
+                <button class="body__container__button-class__button" id="button-to-be-chased" onmouseover="youCanIndeedTouchedTheButtonOhMyGod()">Chase me >:3</button>
             </div>
         </div>
     </body>
