--- a/button-chaserV3/index.html
+++ b/button-chaserV3/index.html
@@ -7,10 +7,11 @@
         <title>Button Chaser Volume 3</title>
     </head>
     <body>
-        <div id="canvas" onmousemove="cursorIsNearButton(event)" class="body__container">
+        <div id="canvas" onmousemove="moveButton(event)" class="body__container">
             <div id="button-div"  class="body__container__button-class">
-                <button class="body__container__button-class__button" id="button-to-be-chased" onmouseover="youCanIndeedTouchTheButtonOhMyGod()">Chase me >:3</button>
+                <button class="body__container__button-class__button" id="button-to-be-chased"">Chase me >:3</button>
             </div>
+            <p id="demo"></p>
         </div>
     </body>
 </html>
