Fix BEM notation

--- a/button-chaserV1/index.html
+++ b/button-chaserV1/index.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <div id="canvas" onmousemove="cursorIsNearButton(event)" class="body__container">
-            <div id="button-div"  class="body__container__button-class">
-                <button class="body__container__button-class__button" id="button-to-be-chased" onmouseover="youCanIndeedTouchTheButtonOhMyGod()">Chase me >:3</button>
+            <div id="button-div"  class="body__button-class">
+                <button class="button-class__button" id="button-to-be-chased" onmouseover="youCanIndeedTouchTheButtonOhMyGod()">Chase me >:3</button>
             </div>
         </div>
     </body>
