--- a/button-chaserV2/index.html
+++ b/button-chaserV2/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="mainpage" content="initial-scale=1, width=device-width">
-        <link href="style.css" rel="stylesheet">
-        <script src="script.js"></script>
-        <title>Button Chaser Volume 2</title>
-    </head>
-    <body>
-        <div id="canvas" onmousemove="cursorIsNearButton(event)" class="body__container">
-            <div id="button-div"  class="body__container__button-class">
-                <button class="body__container__button-class__button" id="button-to-be-chased" onmouseover="youCanIndeedTouchTheButtonOhMyGod()">Chase me >:3</button>
-            </div>
-        </div>
-    </body>
+  <head>
+    <meta name="mainpage" content="initial-scale=1, width=device-width">
+    <link href="style.css" rel="stylesheet">
+    <script src="script.js"></script>
+    <title>Button Chaser Volume 1</title>
+  </head>
+  <body>
+    <div id="canvas" onmousemove="cursorIsNearButton(event)" class="body__container">
+      <div id="button-div"  class="body__button-class">
+        <button class="button-class__button" id="button-to-be-chased" onmouseover="youCanIndeedTouchTheButtonOhMyGod()">Chase me >:3</button>
+      </div>
+    </div>
+  </body>
 </html>
