--- a/button-chaserV2/index.html
+++ b/button-chaserV2/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="canvas" onmousemove="cursorIsNearButton(event)" class="body__container">
-      <div id="button-div"  class="body__button-class">
+      <div id="button-div"  class="body__button-container">
         <button class="button-class__button" id="button-to-be-chased" onmouseover="youCanIndeedTouchTheButtonOhMyGod()">Chase me >:3</button>
       </div>
     </div>
